# caerus-dikeHDFS

./: .gitignore  .gitmodules  README.md  build-dikeHDFS.sh  build.sh  build_client.sh  build_dike_server.sh  build_ndp_client.sh  build_pydike.sh  build_server.sh  config.sh  disable_safe_mode.sh  history.txt  requirements.txt  run_init_tpch.sh  start-dikeHDFS.sh  start_cli.sh  start_datanode.sh  start_minio.sh  start_namenode.sh  start_processor.sh  start_server.sh  stop_all_processors.sh  stop_server.sh  test-dikeHDFS.sh
client/: build.sh  scratchpad.txt  tips.txt
client/client/dikeclient/: pom.xml
client/dikeclient/: pom.xml
client/dikeclient/src/main/java/org/dike/hdfs/: DikeClient.java  DikeClientTest.java  DikeClientTests.java  DikeHdfsConstants.java  DikeHdfsFileSystem.java  DikeHdfsFileSystem.java.3.2.0  DikeHdfsFileSystem.java.hadoop.3.4.0  DikeJsonUtilClient.java  NdpHdfsFileSystem.java
client/ndp-hdfs/: pom.xml
client/ndp-hdfs-client/: pom.xml
client/ndp-hdfs-client/src/main/java/org/dike/hdfs/: ColumVector.java  DikeAggregateClient.java  DikeClient.java  DikeLambdaClient.java  DikeReadAheadClient.java  DikeTpchClient.java  ReadParam.java
client/ndp-hdfs/src/main/java/org/dike/hdfs/: NdpHdfsFileSystem.java
client/ndp-s3-client/: pom.xml
client/ndp-s3-client/src/main/java/org/dike/hdfs/: NdpS3Client.java
config/: core-client.xml  core-site.xml  hdfs-site.xml  tips.txt
dikeHDFS/: CMakeCheckVersion.txt  CMakeLists.txt  build.sh
dikeHDFS/dikeLambda/: CMakeLists.txt  LambdaAggregateNode.cpp  LambdaAggregateNode.hpp  LambdaBinaryColumnWriter.hpp  LambdaColumn.hpp  LambdaFileReader.hpp  LambdaFilterNode.cpp  LambdaFilterNode.hpp  LambdaFrame.cpp  LambdaFrame.hpp  LambdaNode.cpp  LambdaNode.hpp  LambdaParquetReader.hpp  LambdaProcessor.cpp  LambdaProcessor.hpp  LambdaProcessorFactory.cpp  LambdaProcessorReadAhead.cpp  LambdaProcessorTotal.cpp  TpchQ1.cpp  TpchQ1.hpp
dikeHDFS/dikeS3/: CMakeLists.txt  ListObjectsV2.cpp  ProxyHandler.cpp  S3Handlers.hpp  SelectObjectContent.cpp
dikeHDFS/dikeSQL/: CMakeLists.txt  DikeAsyncReader.hpp  DikeCsvReader.hpp  DikeParquetReader.hpp  DikeSQL.cpp  DikeSQL.hpp  StreamReader.cpp  StreamReader.hpp  build.sh  dikeSQLite3.c  dikeSQLite3.h  sqlite3.h  sqlite3ext.h  testDikeSQL.cpp  tips.txt
dikeHDFS/misc/: CMakeLists.txt  hash_test.cpp  hdfs_bw_test.cpp  ndp.txt  omp_test.cpp  orc_test.cpp  pq_test.cpp  pq_write.cpp
dikeHDFS/src/: DikeAsyncReader.hpp  DikeAsyncWriter.hpp  DikeBinaryColumn.c  DikeBinaryColumn.h  DikeBinaryColumnWriter.hpp  DikeBinaryWriter.hpp  DikeBuffer.hpp  DikeCsvReader.hpp  DikeCsvWriter.hpp  DikeHTTPRequestHandler.hpp  DikeIO.hpp  DikeParquetWriter.hpp  DikeProcessor.hpp  DikeStream.hpp  DikeUtil.hpp  dikeHDFS.cpp
dikeHDFS/test/: ints.tbl
docker/: Dockerfile  build-docker.sh  build.sh  startup.sh
etc/hadoop/: core-site.xml  hdfs-site.xml
hadoop/: build.sh  start.sh  stop.sh
hadoop/docker/: Dockerfile  build.sh
hadoop/etc/hadoop/: hdfs-site.xml
pydike/: build_venv.sh  setup.py
pydike/client/: spark_driver.py  tpch.py
pydike/core/: util.py  webhdfs.py
pydike/pydike/client/: spark_driver.py  tpch.py
pydike/pydike/server/: ndp_server.py
pydike/server/: ndp_server.py
scripts/: arrow.py  check_network.py  disable_safe_mode.sh  init_tpch.sh  log_analizer.py  log_analizer1.py  log_sql_analizer.py  parquet2orc.py  start-hadoop.sh  start-processor.sh
server/: build.sh  dikeHDFS.xml
server/config/: core-site.xml
